--- a/demo/app/templates/components/membership-card.jinja
+++ b/demo/app/templates/components/membership-card.jinja
@@ -1,12 +1,11 @@
 <link href='https://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Signika:400' rel='stylesheet' type='text/css'>
 <div class="credit-card">
-    <span class="title">Bank of Utopia</span>
+    <span class="title">SynergiPay Rebates</span>
     {# <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d6/Visa_2021.svg/230px-Visa_2021.svg.png"> #}
     <span class="emboss number mb-3">{{ demo.credential.credentialSubject.number }}</span>
     <span class="emboss name">{{ demo.credential.credentialSubject.holder }}</span>
     <span class="emboss exp me-3">{{ demo.credential.credentialSubject.expires }}</span>
-    <span class="emboss cvv">{{ demo.credential.credentialSubject.cvv }}</span>
 </div>
 
 <style>
