--- a/demo/app/templates/components/credit-card.jinja
+++ b/demo/app/templates/components/credit-card.jinja
@@ -1,12 +1,15 @@
 <link href='https://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Signika:400' rel='stylesheet' type='text/css'>
 <div class="credit-card">
-    <span class="title">Bank of Utopia</span>
+    <span class="title">NeoVault FlexCard</span><br><br>
+    <span class="subtitle">Credit Card</span>
+    
     {# <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d6/Visa_2021.svg/230px-Visa_2021.svg.png"> #}
-    <span class="emboss number mb-3">{{ demo.credential.credentialSubject.number }}</span>
-    <span class="emboss name">{{ demo.credential.credentialSubject.holder }}</span>
-    <span class="emboss exp me-3">{{ demo.credential.credentialSubject.expires }}</span>
-    <span class="emboss cvv">{{ demo.credential.credentialSubject.cvv }}</span>
+    <span class="emboss number mb-3">{{ demo.credentials.creditCard.credentialSubject.number }}</span>
+    <span class="emboss cvv">{{ demo.credentials.creditCard.credentialSubject.cvv }}</span><br>
+    <span class="emboss name">{{ demo.credentials.creditCard.credentialSubject.holder }}</span>
+    <span class="emboss exp me-3">{{ demo.credentials.creditCard.credentialSubject.expires }}</span>
+    
 </div>
 
 <style>
@@ -44,15 +47,27 @@
         display: inline-block;
     }
 
+    .subtitle {
+        font-family: Signika;
+        color: white;
+        font-size: 18px;
+        font-weight: 400;
+        opacity: 0.8;
+        padding-left: 20px;
+        padding-top: 20px;
+        position: absolute;
+        display: inline-block;
+    }
+
 
     .emboss {
         font-family: Share Tech Mono;
         color: transparent;
         text-shadow: -1px -1px 1px rgba(255, 255, 255, 1),
             1px 1px 1px rgba(0, 0, 0, 0.9),
-            2px -2px 4px rgba(255, 255, 255, 1),
-            -2px -2px 2px rgba(0, 0, 0, 0.9),
-            -2px 2px 1px rgba(0, 0, 0, 0.9);
+            1px -1px 1px rgba(255, 255, 255, 1),
+            -1px -1px 1px rgba(0, 0, 0, 0.9),
+            -1px 1px 1px rgba(0, 0, 0, 0.9);
         -webkit-text-stroke: 1px rgba(0, 0, 0, 0.4);
     }
 
@@ -68,9 +83,9 @@
     .name {
         font-size: 24px;
         padding-left: 30px;
-        text-shadow: -2px -1px 1px rgba(255, 255, 255, 1),
+        text-shadow: -1px -1px 1px rgba(255, 255, 255, 1),
             1px 1px 1px rgba(0, 0, 0, 1),
-            1px 0px 1px rgba(255, 255, 255, 1),
+            1px 1px 1px rgba(255, 255, 255, 1),
             -1px -1px 1px rgba(0, 0, 0, 1),
             -1px 1px 1px rgba(0, 0, 0, 1);
         -webkit-text-stroke: 1px rgba(0, 0, 0, 0.2);
@@ -91,9 +106,21 @@
     .exp {
         font-size: 24px;
         padding-left: 100px;
-        text-shadow: -2px -1px 1px rgba(255, 255, 255, 1),
+        text-shadow: -1px -1px 1px rgba(255, 255, 255, 1),
             1px 1px 1px rgba(0, 0, 0, 1),
-            1px 0px 1px rgba(255, 255, 255, 1),
+            1px 1px 1px rgba(255, 255, 255, 1),
+            -1px -1px 1px rgba(0, 0, 0, 1),
+            -1px 1px 1px rgba(0, 0, 0, 1);
+        -webkit-text-stroke: 1px rgba(0, 0, 0, 0.2);
+        -webkit-text-stroke: 1px rgba(0, 0, 0, 0.2);
+    }
+
+    .cvv {
+        font-size: 18px;
+        padding-left: 100px;
+        text-shadow: -1px -1px 1px rgba(255, 255, 255, 1),
+            1px 1px 1px rgba(0, 0, 0, 1),
+            1px 1px 1px rgba(255, 255, 255, 1),
             -1px -1px 1px rgba(0, 0, 0, 1),
             -1px 1px 1px rgba(0, 0, 0, 1);
         -webkit-text-stroke: 1px rgba(0, 0, 0, 0.2);
