--- a/demo/app/templates/components/footer.jinja
+++ b/demo/app/templates/components/footer.jinja
@@ -3,26 +3,13 @@
         <div class="row text-center align-items-center flex-row-reverse">
             <div class="col-lg-auto ms-lg-auto">
                 <ul class="list-inline list-inline-dots mb-0">
-                    <li class="list-inline-item"><a href="https://tabler.io/docs" target="_blank" class="link-secondary"
-                            rel="noopener">Documentation</a></li>
-                    <li class="list-inline-item"><a href="./license.html" class="link-secondary">License</a>
+                    <li class="list-inline-item">
+                        <a href="https://api.anoncreds.vc/docs" target="_blank" class="link-secondary"
+                            rel="noopener">API</a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://github.com/tabler/tabler" target="_blank" class="link-secondary"
+                        <a href="https://github.com/hyperledger/anoncreds-v2-rs" target="_blank" class="link-secondary"
                             rel="noopener">Source code</a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="https://github.com/sponsors/codecalm" target="_blank" class="link-secondary"
-                            rel="noopener">
-                            <!-- Download SVG icon from http://tabler.io/icons/icon/heart -->
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" class="icon text-pink icon-inline icon-4">
-                                <path d="M19.5 12.572l-7.5 7.428l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572">
-                                </path>
-                            </svg>
-                            Sponsor
-                        </a>
                     </li>
                 </ul>
             </div>
@@ -30,10 +17,7 @@
                 <ul class="list-inline list-inline-dots mb-0">
                     <li class="list-inline-item">
                         Copyright © 2025
-                        <a href="." class="link-secondary">Tabler</a>. All rights reserved.
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="./changelog.html" class="link-secondary" rel="noopener"> v1.1.1 </a>
+                        <a href="." class="link-secondary">Linux Foundation</a>. All rights reserved.
                     </li>
                 </ul>
             </div>
