--- a/demo/app/templates/components/membership-card.jinja
+++ b/demo/app/templates/components/membership-card.jinja
@@ -1,157 +1,13 @@
 <link href='https://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Signika:400' rel='stylesheet' type='text/css'>
 <div class="credit-card">
-    <span class="title">SynergiPay Rebates</span>
+    <span class="title">SynergiPay Consortium</span><br><br>
+    <span class="subtitle">Rebates Card</span>
     {# <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d6/Visa_2021.svg/230px-Visa_2021.svg.png"> #}
-    <span class="emboss number mb-3">{{ demo.credential.credentialSubject.number }}</span>
-    <span class="emboss name">{{ demo.credential.credentialSubject.holder }}</span>
-    <span class="emboss exp me-3">{{ demo.credential.credentialSubject.expires }}</span>
+    <span class="emboss number mb-3">{{ demo.credentials.rebatesCard.credentialSubject.clientNo }}</span><br>
+    <span class="emboss name">{{ demo.credentials.rebatesCard.credentialSubject.clientName }}</span>
+    <span class="emboss exp me-3">{{ demo.credentials.rebatesCard.credentialSubject.anniversaryMonth }}</span>
 </div>
 
 <style>
-    .credit-card {
-        font-family: Share Tech Mono;
-        background-color: #9BA7B2;
-        display: block;
-        border-radius: 20px;
-        -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 1);
-        -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 1);
-        box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 1);
-        border: 1px solid grey;
-        margin: auto;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(-125deg, #1D3349, #06121E 55%);
-    }
-
-    .mc {
-        position: absolute;
-        max-width: 140px;
-        padding-top: 300px;
-        padding-left: 520px;
-    }
-
-    .title {
-        font-family: Signika;
-        color: white;
-        font-size: 28px;
-        font-weight: 400;
-        opacity: 0.8;
-        padding-left: 20px;
-        padding-top: 20px;
-        position: absolute;
-        display: inline-block;
-    }
-
-
-    .emboss {
-        font-family: Share Tech Mono;
-        color: transparent;
-        text-shadow: -1px -1px 1px rgba(255, 255, 255, 1),
-            1px 1px 1px rgba(0, 0, 0, 0.9),
-            2px -2px 4px rgba(255, 255, 255, 1),
-            -2px -2px 2px rgba(0, 0, 0, 0.9),
-            -2px 2px 1px rgba(0, 0, 0, 0.9);
-        -webkit-text-stroke: 1px rgba(0, 0, 0, 0.4);
-    }
-
-    .number {
-        display: inline-block;
-        padding-top: 100px;
-        font-size: 24px;
-        padding-left: 50px;
-        position: relative;
-        z-index: 999;
-    }
-
-    .name {
-        font-size: 24px;
-        padding-left: 30px;
-        text-shadow: -2px -1px 1px rgba(255, 255, 255, 1),
-            1px 1px 1px rgba(0, 0, 0, 1),
-            1px 0px 1px rgba(255, 255, 255, 1),
-            -1px -1px 1px rgba(0, 0, 0, 1),
-            -1px 1px 1px rgba(0, 0, 0, 1);
-        -webkit-text-stroke: 1px rgba(0, 0, 0, 0.2);
-        display: inline-block;
-        padding-bottom: 20px;
-    }
-
-    .small-type {
-        font-family: sans-serif;
-        text-transform: uppercase;
-        color: white;
-        padding-left: 100px;
-        line-height: 10px;
-        letter-spacing: 1px;
-        opacity: 0.7;
-    }
-
-    .exp {
-        font-size: 24px;
-        padding-left: 100px;
-        text-shadow: -2px -1px 1px rgba(255, 255, 255, 1),
-            1px 1px 1px rgba(0, 0, 0, 1),
-            1px 0px 1px rgba(255, 255, 255, 1),
-            -1px -1px 1px rgba(0, 0, 0, 1),
-            -1px 1px 1px rgba(0, 0, 0, 1);
-        -webkit-text-stroke: 1px rgba(0, 0, 0, 0.2);
-        -webkit-text-stroke: 1px rgba(0, 0, 0, 0.2);
-    }
-
-    @-webkit-keyframes Logo {
-        0% {
-            background-position: 0% 50%
-        }
-
-        50% {
-            background-position: 100% 50%
-        }
-
-        100% {
-            background-position: 0% 50%
-        }
-    }
-
-    @-moz-keyframes Logo {
-        0% {
-            background-position: 0% 50%
-        }
-
-        50% {
-            background-position: 100% 50%
-        }
-
-        100% {
-            background-position: 0% 50%
-        }
-    }
-
-    @-o-keyframes Logo {
-        0% {
-            background-position: 0% 50%
-        }
-
-        50% {
-            background-position: 100% 50%
-        }
-
-        100% {
-            background-position: 0% 50%
-        }
-    }
-
-    @keyframes Logo {
-        0% {
-            background-position: 0% 50%
-        }
-
-        50% {
-            background-position: 100% 50%
-        }
-
-        100% {
-            background-position: 0% 50%
-        }
-    }
 </style>
