--- a/demo/app/templates/layouts/base.jinja
+++ b/demo/app/templates/layouts/base.jinja
@@ -13,11 +13,12 @@
 </head>
 
 <body>
+    {# {% include('components/nav.jinja') %} #}
     <div class="page page-center">
-        <div class="page-wrapper">
+        <div class="container py-4">
             {% block page %}{% endblock %}
-            {% include('components/footer.jinja') %}
         </div>
+        {% include('components/footer.jinja') %}
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.1.1/dist/js/tabler.min.js" defer=""></script>
 </body>
