--- a/demo/app/templates/components/receipt-shorts.jinja
+++ b/demo/app/templates/components/receipt-shorts.jinja
@@ -15,7 +15,7 @@
                         class="icon icon-inline me-1 text-green icon-3">
                         <path d="M5 12l5 5l10 -10"></path>
                     </svg>
-                    Verified
+                    Verified ({{proof_id}})
                 </li>
                 {% elif session['presentations']['shorts-checkout']['proofs'][proof_id].get('VerifiableEncryption') %}
                 <li>
@@ -25,7 +25,7 @@
                         class="icon icon-inline me-1 text-green icon-3">
                         <path d="M5 12l5 5l10 -10"></path>
                     </svg>
-                    Transaction Approved
+                    Transaction Approved ({{proof_id}})
                 </li>
                 <li>
                     <!-- Download SVG icon from http://tabler.io/icons/icon/check -->
@@ -34,8 +34,9 @@
                         class="icon icon-inline me-1 text-green icon-3">
                         <path d="M5 12l5 5l10 -10"></path>
                     </svg>
-                    Account Found
+                    Account Found ({{proof_id}})
                 </li>
+                {% elif session['presentations']['shorts-checkout']['proofs'][proof_id].get('Equality') %}
                 <li>
                     <!-- Download SVG icon from http://tabler.io/icons/icon/check -->
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -43,7 +44,7 @@
                         class="icon icon-inline me-1 text-green icon-3">
                         <path d="M5 12l5 5l10 -10"></path>
                     </svg>
-                    Trusted Holder
+                    Trusted Holder ({{proof_id}})
                 </li>
                 {% elif session['presentations']['shorts-checkout']['proofs'][proof_id].get('Revocation') %}
                 <li>
@@ -53,7 +54,18 @@
                         class="icon icon-inline me-1 text-green icon-3">
                         <path d="M5 12l5 5l10 -10"></path>
                     </svg>
-                    Valid
+                    Valid ({{proof_id}})
+                </li>
+                {% elif session['presentations']['shorts-checkout']['proofs'][proof_id].get('Range') %}
+                <li>
+                    <!-- Download SVG icon from http://tabler.io/icons/icon/check -->
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="icon text-red icon-2">
+                        <path d="M18 6l-12 12"></path>
+                        <path d="M6 6l12 12"></path>
+                    </svg>
+                    Anniversary Promo ({{proof_id}})
                 </li>
                 <li>
                     <!-- Download SVG icon from http://tabler.io/icons/icon/check -->
@@ -63,19 +75,8 @@
                         <path d="M18 6l-12 12"></path>
                         <path d="M6 6l12 12"></path>
                     </svg>
-                    Anniversary Promo
+                    Legacy Rebates ({{proof_id}})
                 </li>
-                <li>
-                    <!-- Download SVG icon from http://tabler.io/icons/icon/check -->
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                        class="icon text-red icon-2">
-                        <path d="M18 6l-12 12"></path>
-                        <path d="M6 6l12 12"></path>
-                    </svg>
-                    Legacy Rebates
-                </li>
-                {% elif session['presentations']['shorts-checkout']['proofs'][proof_id].get('Equality') %}
                 {% endif %}
                 {% endfor %}
             </ul>
