--- a/demo/app/templates/components/receipt-shorts.jinja
+++ b/demo/app/templates/components/receipt-shorts.jinja
@@ -1,23 +1,24 @@
 <div class="bg-body-tertiary p-6 rounded-4">
     <div class="row g-4 align-items-center">
-        <div class="col-lg">
+        <div class="col-4">
             <h3 class="h2">Threadly Clothing</h3>
             <p class="m-0 text-secondary">Presentation Receipt</p>
         </div>
-        <div class="col-lg">
+        <div class="col-8">
             <ul class="list-unstyled m-0">
                 {% for proof_id in session['presentations']['shorts-checkout']['proofs'] %}
                 {% if session['presentations']['shorts-checkout']['proofs'][proof_id].get('Signature') %}
-                <li>
-                    <!-- Download SVG icon from http://tabler.io/icons/icon/check -->
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                        class="icon icon-inline me-1 text-green icon-3">
-                        <path d="M5 12l5 5l10 -10"></path>
-                    </svg>
-                    Verified ({{proof_id}})
-                </li>
+                    <li>
+                        <!-- Download SVG icon from http://tabler.io/icons/icon/check -->
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            class="icon icon-inline me-1 text-green icon-3">
+                            <path d="M5 12l5 5l10 -10"></path>
+                        </svg>
+                        Verified - ({{proof_id}})
+                    </li>
                 {% elif session['presentations']['shorts-checkout']['proofs'][proof_id].get('VerifiableEncryption') %}
+                    {% if proof_id == 'cc-number-encryption' %}
                 <li>
                     <!-- Download SVG icon from http://tabler.io/icons/icon/check -->
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -25,8 +26,9 @@
                         class="icon icon-inline me-1 text-green icon-3">
                         <path d="M5 12l5 5l10 -10"></path>
                     </svg>
-                    Transaction Approved ({{proof_id}})
+                    Transaction Approved - ({{proof_id}})
                 </li>
+                    {% elif proof_id == 'rebates-clientNo-encryption' %}
                 <li>
                     <!-- Download SVG icon from http://tabler.io/icons/icon/check -->
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -34,8 +36,9 @@
                         class="icon icon-inline me-1 text-green icon-3">
                         <path d="M5 12l5 5l10 -10"></path>
                     </svg>
-                    Account Found ({{proof_id}})
+                    Account Found - ({{proof_id}})
                 </li>
+                    {% endif %}
                 {% elif session['presentations']['shorts-checkout']['proofs'][proof_id].get('Equality') %}
                 <li>
                     <!-- Download SVG icon from http://tabler.io/icons/icon/check -->
@@ -44,7 +47,7 @@
                         class="icon icon-inline me-1 text-green icon-3">
                         <path d="M5 12l5 5l10 -10"></path>
                     </svg>
-                    Trusted Holder ({{proof_id}})
+                    Trusted Holder - ({{proof_id}})
                 </li>
                 {% elif session['presentations']['shorts-checkout']['proofs'][proof_id].get('Revocation') %}
                 <li>
@@ -54,9 +57,10 @@
                         class="icon icon-inline me-1 text-green icon-3">
                         <path d="M5 12l5 5l10 -10"></path>
                     </svg>
-                    Valid ({{proof_id}})
+                    Valid - ({{proof_id}})
                 </li>
                 {% elif session['presentations']['shorts-checkout']['proofs'][proof_id].get('Range') %}
+                    {% if proof_id == 'rebates-register-range' %}
                 <li>
                     <!-- Download SVG icon from http://tabler.io/icons/icon/check -->
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -65,9 +69,10 @@
                         <path d="M18 6l-12 12"></path>
                         <path d="M6 6l12 12"></path>
                     </svg>
-                    Anniversary Promo ({{proof_id}})
+                    Legacy Rebates - ({{proof_id}})
                 </li>
-                <li>
+                    {% elif proof_id == 'rebates-number-encryption' %}
+                {# <li>
                     <!-- Download SVG icon from http://tabler.io/icons/icon/check -->
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -75,8 +80,9 @@
                         <path d="M18 6l-12 12"></path>
                         <path d="M6 6l12 12"></path>
                     </svg>
-                    Legacy Rebates ({{proof_id}})
-                </li>
+                    Legacy Rebates - ({{proof_id}})
+                </li> #}
+                    {% endif %}
                 {% endif %}
                 {% endfor %}
             </ul>
