--- a/demo/app/templates/pages/index.jinja
+++ b/demo/app/templates/pages/index.jinja
@@ -6,6 +6,8 @@
 {% include ('components/modals/issue-rebates-card.jinja') %}
 {% include ('components/modals/checkout-shoes.jinja') %}
 {% include ('components/modals/checkout-shorts.jinja') %}
+{% include ('components/modals/claims.jinja') %}
+{% include ('components/modals/statements.jinja') %}
 <div class="page-header d-print-none">
     <div class="container-xl">
         <div class="row g-2 align-items-center">
@@ -17,6 +19,32 @@
             <!-- Page title actions -->
             <div class="col-auto ms-auto d-print-none">
                 <div class="btn-list">
+                    <span class="d-none d-sm-inline">
+                        <a href="#" class="btn btn-1" data-bs-toggle="modal" data-bs-target="#modal-claims">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round"
+                                class="icon icon-tabler icons-tabler-outline icon-tabler-question-mark">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                <path d="M8 8a3.5 3 0 0 1 3.5 -3h1a3.5 3 0 0 1 3.5 3a3 3 0 0 1 -2 3a3 4 0 0 0 -2 4" />
+                                <path d="M12 19l0 .01" />
+                            </svg>
+                            Claims
+                        </a>
+                    </span>
+                    <span class="d-none d-sm-inline">
+                        <a href="#" class="btn btn-1" data-bs-toggle="modal" data-bs-target="#modal-statements">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round"
+                                class="icon icon-tabler icons-tabler-outline icon-tabler-question-mark">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                <path d="M8 8a3.5 3 0 0 1 3.5 -3h1a3.5 3 0 0 1 3.5 3a3 3 0 0 1 -2 3a3 4 0 0 0 -2 4" />
+                                <path d="M12 19l0 .01" />
+                            </svg>
+                            Statements
+                        </a>
+                    </span>
                     <span class="d-none d-sm-inline">
                         <a href="#" class="btn btn-1" data-bs-toggle="modal" data-bs-target="#modal-wallet">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -59,7 +87,8 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-auto">
-                                <span class="avatar avatar-2 rounded" style="background-image: url({{ url_for('static', filename='img/neovault.png')}})"></span>
+                                <span class="avatar avatar-2 rounded"
+                                    style="background-image: url({{ url_for('static', filename='img/neovault.png')}})"></span>
                             </div>
                             <div class="col">
                                 <div class="font-weight-medium">NeoVault FluxCard</div>
@@ -74,7 +103,8 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-auto">
-                                <span class="avatar avatar-2 rounded" style="background-image: url({{ url_for('static', filename='img/synergipay.png')}})"></span>
+                                <span class="avatar avatar-2 rounded"
+                                    style="background-image: url({{ url_for('static', filename='img/synergipay.png')}})"></span>
                             </div>
                             <div class="col">
                                 <div class="font-weight-medium">SynergiPay Instant Rebates Card</div>
@@ -89,7 +119,8 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-auto">
-                                <span class="avatar avatar-2 rounded" style="background-image: url({{ url_for('static', filename='img/stridehub.png')}})"></span>
+                                <span class="avatar avatar-2 rounded"
+                                    style="background-image: url({{ url_for('static', filename='img/stridehub.png')}})"></span>
                             </div>
                             <div class="col">
                                 <div class="font-weight-medium">StrideHub Shoes</div>
@@ -104,11 +135,13 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-auto">
-                                <span class="avatar avatar-2 rounded" style="background-image: url({{ url_for('static', filename='img/threadly.png')}})"></span>
+                                <span class="avatar avatar-2 rounded"
+                                    style="background-image: url({{ url_for('static', filename='img/threadly.png')}})"></span>
                             </div>
                             <div class="col">
                                 <div class="font-weight-medium">Threadly Clothing</div>
-                                <div class="text-secondary">Purchase a pair of BreezeFit Advanced shorts from FlexWear</div>
+                                <div class="text-secondary">Purchase a pair of BreezeFit Advanced shorts from FlexWear
+                                </div>
                             </div>
                         </div>
                     </div>
